[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AnalogSensePy"
version = "1.0.6"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "hid; sys_platform == 'linux'",
    "hidapi; sys_platform != 'linux'",
]

[project.urls]
Homepage = "https://github.com/girlglock/AnalogSense-Python-SDK"